2008-04-22  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8182: Fatal error on calling sysLog() of lock object if locking method is unknown

2008-04-22  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8174: Clear all caches should clear configuration cache as well (thanks to Steffen Kamper)
	* Fixed bug #8040: Bug: Wrong check on creating folders in filelist makes them unaccessible (thanks to Moreno Feltscher)

2008-04-20  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #8138: Search in Loaded Extensions not working
	* Fixed bug #8019: missing htmlspecialchars() in adminPanel
	* Fixed bug #8169: Admin functions tab visible for non admins (All patches above by Steffen Kamper)

2008-04-20  Ingo Renner  <ingo@typo3.org>

	* Added missing icons for tt_content when overlayed with different states, credits Helmut Hummel

2008-04-16  Ingo Renner  <ingo@typo3.org>

	* Release of TYPO3 4.2.0RC2

2008-04-16  Martin Kutschker  <masi@typo3.org>

	* Fixed bug #4186 (correction): cropping didn't work for IM4/5 and GM (thanks to Helmut Hummel)

2008-04-16  Benjamin Mack  <benni@typo3.org>

	* HCI: Changed t3skin icon "new_file.gif"

2008-04-16  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #8001: Problems using link wizard in content elements, credits Ralf Hettinger
	* Marked typo3/alt_main.php as deprecated
	* Fixed bug #8060: preview in clickmenu of list-module on tt_content records broken
	* Added new icons for content elements in t3skin
	* Added new icons in t3skin to select image orientation in Text w/Image content elements
	* Added several other new icons in t3skin
	* Replaced icon for Web->Functions in t3skin
	* Fixed bug #8108: Extension configuration options are not always shown, credits Jeff Segars
	* Various Bugfixes for t3editor
		* Fixed bug #6812: Editor does not respect charset settings while saving with AJAX
		* Fixed bug #8049: TypoScript templates can't be saved at all after editing them using IE7/WinXP